# Facade

./: Cargo.toml  LICENSE  README.md  app.rc  build.rs
src/: main.rs  textutils.rs
