[package]
name = "FCDS"
version = "1.0.0"
edition = "2024"

[build-dependencies]
embed-resource = "2.0"

[dependencies]
svg2pdf = "0.13.0"
csv = "1.3.1"
lopdf = "0.36.0"

eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui-file-dialog = "0.9.0"
resvg = "0.45.0"
image = { version = "0.25.5", features = ["jpeg", "png"] }
glob = "0.3.2"
tempdir = "0.3"
